# hancut_mk2

./: .gitignore  README.md  docker-compose.yml  start.sh  test.sh
.github/workflows/: backend-ci.yml  ci-cd.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: finetune_siglip.py  request_schemas.py  response_schemas.py  schemas.py
backend/app/models/siglip/: config.json  preprocessor_config.json
backend/app/registrations/: __init__.py
backend/app/routes/: hancut_routes.py  llm_routes.py  style_llm_routes.py  vision_routes.py
backend/app/services/: llm_service.py  vision_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: Footer.js  Footer.tsx  Header.js  Header.tsx
frontend/src/pages/: Home.js  Home.tsx  ImageStyle.js  ImageStyle.tsx  ObjectDetection.js  ObjectDetection.tsx  OneStep.tsx  Steps.tsx  TextPrompt.js  TextPrompt.tsx
frontend/src/services/: api.js  api.ts
test/: __init__.py  run_test.py
test/data/: img_data.txt  text_data.txt
test/model/: __init__.py  test_schemas.py
test/service/: __init__.py  analyze_service.py  db_service.py  generate_service.py
