[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hancut-backend"
version = "0.1.0"
description = "Backend service for HanCut interior prompt generation"
requires-python = ">=3.10.17,<3.11"
readme = "README.md"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "python-multipart==0.0.9",
    "aiohttp==3.9.5",
    "openai==0.28.0",
    "pillow==10.3.0",
    "numpy==1.26.4",
    "transformers==4.49.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
    "accelerate>=0.26.0",
]

[tool.uv]
cache-dir = ".cache/uv"
